--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -3,6 +3,14 @@
 @tailwind components;
 @tailwind utilities;
 
+
+html,body {
+  overflow-x :hidden ;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 /* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
