--- a/Frontend/src/Components/GlobalPresence/GlobalPresence.css
+++ b/Frontend/src/Components/GlobalPresence/GlobalPresence.css
@@ -11,6 +11,7 @@
     justify-content: center;
     color: white;
     padding-top: 200px;
+    margin-bottom: 100px;
   }
   
   /* Section Title */
