--- a/Frontend/src/Components/NewProduct/NewProduct.css
+++ b/Frontend/src/Components/NewProduct/NewProduct.css
@@ -1,12 +1,26 @@
 /* New Products Section */
 .new-products-section {
-    padding: 80px 144px 112px;
+   padding-top: 112px;
+   padding-bottom: 112px;
+   padding-right: 144px;
+   padding-left: 144px;
     width: 100%;
-    height: auto;
+    height: 1076px;
+    gap: 32px;
+  }
+
+  .new-products-header{
+    width: 100%;
+    height: 118px;
+    padding-left: 144px;
+    padding-right: 144px;
+    margin-bottom: 40px;
   }
   
   /* Section Subtitle */
   .new-products-subtitle {
+    width: 100%;
+    height: 34px;
     color: #9D0A0E;
     font-size: 24px;
     line-height: 33.6px;
@@ -18,6 +32,7 @@
   
   /* Section Title */
   .new-products-title {
+    width: 100%;
     color: #0A0A0A;
     font-size: 60px;
     line-height: 84px;
@@ -45,7 +60,7 @@
     flex-direction: column;
     align-items: center;
     width: 235px;
-    height: 300px;
+    height: 323px;
     overflow: hidden;
     transition: all 0.3s ease-in-out;
   }
@@ -133,13 +148,15 @@
   
   /* Product Title at Bottom */
   .product-title {
-    text-align: center;
-    color: #4A5568;
+    text-align: left;
+    color: #0A0A0A;
     font-size: 16px;
-    line-height: 24px;
+    line-height: 22.4px;
     font-weight: 600;
     font-family: 'Manrope', sans-serif;
-    width: 100%;
-    padding-bottom: 16px;
+    width: 204px;
+    height: 23px;
+    gap: 10px;
+    padding-bottom: 36px;
   }
   
