--- a/Frontend/src/Components/WhyChooseUsSection/WhyChooseUsSection.css
+++ b/Frontend/src/Components/WhyChooseUsSection/WhyChooseUsSection.css
@@ -3,13 +3,14 @@
     display: flex;
     width: 100%;
     height: 500px;
+    margin-bottom: 90px;
   }
   
   /* Left Section */
   .why-choose-left {
     position: relative;
     width: 50%;
-    height: 100%;
+    height: 108.6%;
     background-color: #510002;
     color: white;
     display: flex;
