--- a/Frontend/src/Pages/AboutUs/AboutUs.css
+++ b/Frontend/src/Pages/AboutUs/AboutUs.css
@@ -113,3 +113,182 @@
 .history-btn button:hover span:last-child {
   transform: translateX(6px);
 }
+
+
+.about-container{
+width: 100%;
+height: 395.5px;
+padding-top: 80px;
+padding-bottom: 80px;
+padding-left: 144px;
+padding-right: 144px;
+display: flex;
+flex-direction: row;
+justify-content: center;
+gap: 30px;
+}
+
+.about-card{
+    width: 428px;
+    height: 235.5px;
+    border-radius: 8px;
+    background-color: #ffffff;
+    box-shadow: #19213D1C 0px 4px 10px;
+    /* display: flex; */
+    padding-top: 30px;
+
+}
+
+
+.about-card-img{
+    width: 60px;
+    height: 60px;
+    padding: 4px;
+    gap:8px;
+    justify-self: center;
+
+}
+
+
+.about-card-title {
+    font-family: 'Red Hat Display', sans-serif;
+    font-weight: 800;
+    font-size: 30px;
+    line-height: 42px;
+    color: #070912;
+    margin: 0 auto;
+    max-width: 428px;
+    text-align: center;
+}
+
+
+.about-card-desc{
+    width: 400px;
+    height: 25px;
+    font-family: 'Manrope', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22.4px;
+    color: #070912;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.map-global{
+    margin-top: 50px;
+}
+
+.team-wrapper {
+    width: 100%;
+    height: 1242px;
+    padding-left: 144px;
+    padding-right: 144px;
+    padding-top:112px;
+    padding-bottom: 112px;
+    gap: 32px;
+    text-align: center;
+  }
+.team-heading{
+    width: 100%;
+    height: 218px;
+    gap: 16px;
+}
+  .team-subtitle {
+    /* width: 873px; */
+    height: 34px;
+    font-family: 'Red Hat Display', sans-serif;
+    font-weight: 800;
+    color: #9d0a0e;
+    text-transform: uppercase;
+    line-height: 33.6px;
+    font-size: 24px;
+    text-align: center;
+  }
+
+  .team-title {
+    max-width: 1032px;
+    height: 168px;
+    color: #0A0A0A;
+    font-family: 'Red Hat Display', sans-serif;
+    font-weight: 800;
+    line-height: 84px;
+    font-size: 60px;
+    text-align: center;
+    margin: 0 auto;
+}
+
+.team-section {
+    width: 1432px;
+    height: 768px;
+    gap: 24px;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    margin-top: 2rem;
+  }
+  
+  .team-card {
+    width: 272.2px;
+    height: 372.2px;
+    background: #ffffff;
+    padding: 16px;
+    border-radius: 8px;
+    border: 1px solid #FEEEE9;
+    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.05);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  
+  .team-card:hover {
+    background-color: #9d0a0e;
+    transform: translateY(-5px);
+    box-shadow: 0 12px 24px rgba(0, 0, 0, 0.1);
+  }
+  
+  .team-card-image {
+
+    width: 240.2px;
+    height: 240.2px;
+    object-fit: cover;
+    radius: 50%;
+  }
+  
+  /* bottom content wrapper */
+  .team-card-content {
+    width: 240px;
+    height: 100px;
+    padding: 16px 24px 16px 24px;
+    gap: 8px;
+    transition: background 0.3s ease, color 0.3s ease;
+    border-radius: 0 0 0.5rem 0.5rem;
+  }
+  
+ 
+  
+  .team-card:hover .team-card-name,
+  .team-card:hover .team-card-role {
+    color: #ffffff;
+  }
+  
+  .team-card-name {
+    width: 192px;
+    height: 34px;
+    font-family: 'Red Hat Display', sans-serif;
+    line-height: 33.6px;
+    font-size: 24px;
+    font-weight: 600;
+    color: #070912;
+  }
+  
+  .team-card-role {
+    width: 192px;
+    height: 26px;
+    font-family: 'Manrope', sans-serif;
+    font-weight: 400;
+    line-height: 25.2px;
+    color: #070912;
+    font-size: 18px;
+    margin-top: 0.25rem;
+  }
+  
