--- a/Frontend/src/Pages/AboutUs/AboutUs.css
+++ b/Frontend/src/Pages/AboutUs/AboutUs.css
@@ -179,13 +179,14 @@ gap: 30px;
 }
 
 .team-wrapper {
-    width: 100%;
+    max-width: 1432px;
     height: 1242px;
-    padding-left: 144px;
-    padding-right: 144px;
-    padding-top:112px;
-    padding-bottom: 112px;
-    gap: 32px;
+    /* padding-left: 144px; */
+    /* padding-right: 144px; */
+    padding-top:100px;
+    padding-bottom: 100px;
+    gap: 2px;
+    margin: 0 auto;
     text-align: center;
   }
 .team-heading{
@@ -220,10 +221,12 @@ gap: 30px;
 .team-section {
     width: 1432px;
     height: 768px;
-    gap: 24px;
+    gap: 2px;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     margin-top: 2rem;
+    margin: 0 auto;
+    margin-left: 5px;
   }
   
   .team-card {
