--- a/Frontend/src/Components/NeedHelp/NeedHelp.css
+++ b/Frontend/src/Components/NeedHelp/NeedHelp.css
@@ -10,7 +10,8 @@
     background-position: center;
     margin-left: 130px;
     margin-bottom: -70px;
-    width: 1432px;
+   max-width: 1190px;
+   width: 100%;
     height: 112px;
     padding: 64px 40px;
     border-radius: 8px;
