--- a/Frontend/src/Components/BlogSection/BlogSection.css
+++ b/Frontend/src/Components/BlogSection/BlogSection.css
@@ -79,7 +79,7 @@
 }
 
 .custom-blog-category {
-  color: #d9534f;
+  color: #9D0A0E;
 }
 
 .custom-blog-title-wrapper {
@@ -89,8 +89,9 @@
 }
 
 .borderleft {
-  width: 2px;
-  height: 30px;
+  width: 5px;
+  border-radius: 8px;
+  height: 50px;
   background-color: #9D0A0E;
 }
 
