blog detail page

--- a/Frontend/src/Pages/BlogDetails/BlogPost.css
+++ b/Frontend/src/Pages/BlogDetails/BlogPost.css
@@ -14,12 +14,12 @@
 .breadcrumb-container {
     width: 90%;
     height: 66px;
-    padding: 16px 0;
-    gap: 8px;
+    /* padding: 16px 0; */
+    /* gap: 8px; */
     font-size: 14px;
     display: flex;
     align-items: center;
-    margin-left: 80px;
+    /* margin-left: 80px; */
   }
 
   .breadcrumb-link {
@@ -37,6 +37,7 @@
   }
 
   .blog-article {
+    margin: 0 -90px;
     width: 614px;
     display: flex;
     flex-direction: column;
