news & event done

--- a/Frontend/src/Pages/New&Event/New&Event.css
+++ b/Frontend/src/Pages/New&Event/New&Event.css
@@ -9,7 +9,7 @@
     grid-template-columns: 1fr 3fr;
     gap: 24px;
     width: 1232px;
-    margin-left: 90px;
+    /* margin-left: 90px; */
     height: auto;
   }
 
