--- a/Frontend/src/Components/AboutUsSection/AboutUsSection.css
+++ b/Frontend/src/Components/AboutUsSection/AboutUsSection.css
@@ -1,7 +1,8 @@
 /* About Us Section */
 .about-section {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    /* flex-direction: column; */
     align-items: center;
     justify-content: space-between;
     background-color: white;
@@ -35,26 +36,12 @@
 .learn-more-btn span {
   margin-left: 10px;
 }
-
-  
-  @media (min-width: 1024px) {
-    .about-section {
-      flex-direction: row;
-    }
-  }
-  
   /* Right Content Wrapper */
   .about-text-content {
-    width: 100%;
+    width: 50%;
     display: flex;
     flex-direction: column;
     gap: 24px; /* Matches gap-6 */
-  }
-  
-  @media (min-width: 1024px) {
-    .about-text-content {
-      width: 50%;
-    }
   }
   
   /* Section Subtitle */
@@ -102,30 +89,19 @@
     font-family: 'Red Hat Display', sans-serif;
   }
   
-  /* CTA Button */
- 
-  /* Learn More Arrow */
-  
- 
-  /* Image Container */
   .about-image-container {
     position: relative;
-    width: 100%;
+    /* width: 100%; */
     display: flex;
     justify-content: center;
     margin-top: 120px;
+    width: 50%;
   }
   
-  @media (min-width: 1024px) {
-    .about-image-container {
-      width: 50%;
-    }
-  }
-  
-  /* About Image */
   .about-image {
-    width: 190%;
-    height: 690px;
+    margin-bottom: 90px;
+    width: 776px;
+    height: 721px;
     border-radius: 12px;
     object-fit: contain;
   }
