--- a/Frontend/src/Components/Header/Header.css
+++ b/Frontend/src/Components/Header/Header.css
@@ -177,7 +177,7 @@
   line-height: 1.4;
   font-weight: 600;
   margin-top: 16px;
-  width: auto;
+  width: 165px;
   height: auto;
   display: flex;
   align-items: center;
