--- a/Frontend/src/Components/Testimonials/Testimonials.css
+++ b/Frontend/src/Components/Testimonials/Testimonials.css
@@ -77,15 +77,15 @@
     background: white;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.05);
     padding: 24px;
-    min-width: 25%;
+    min-width: 28%;
     border-radius: 8px;
     border: 1px solid #e5e7eb;
-    margin-right: 56px;
+    margin-right: 20px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     font-family: 'Red Hat Display', sans-serif;
-    font-weight: 600;
+    font-weight: 500;
     font-size: 20px;
     line-height: 33.6px;
   }
@@ -158,7 +158,7 @@
     width: 200px;
     height: 50px;
     border-radius: 90px;
-    border:2px solid transparent;
+    border: transparent;
     background: linear-gradient(to right, #9d0a0e, #f15922);
     color: white;
     font-weight: 600;
@@ -174,7 +174,7 @@
   .testimonial-viewall button:hover {
     background: white;
     color: #9d0a0e;
-    border-color: #9d0a0e;
+    border:2px solid #9d0a0e;
   }
 
   .testimonial-viewall button span:first-child {
